Completed VM Properties update Began PitScouting update

--- a/ScoutingCollection/ScoutingCollection/MainPage.xaml
+++ b/ScoutingCollection/ScoutingCollection/MainPage.xaml
@@ -41,8 +41,9 @@
                     SelectedItem="{Binding CompKey, Mode=OneWayToSource}">
                 <Picker.ItemsSource>
                     <x:Array Type="{x:Type x:String}">
+                        <x:String>Palmetto</x:String>
                         <x:String>Palm Beach</x:String>
-                        <x:String>Orlando</x:String>
+                        <x:String>Pittsburgh</x:String>
                     </x:Array>
                 </Picker.ItemsSource>
             </Picker>
