--- a/ScoutingCollection/ScoutingCollection/MatchScoutAutoPage.xaml
+++ b/ScoutingCollection/ScoutingCollection/MatchScoutAutoPage.xaml
@@ -21,6 +21,12 @@
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
 
 
@@ -28,69 +34,85 @@
                         Text="Back"
                         Clicked="back_Clicked"
                         Grid.Row="0"
-                        Grid.Column="0"/>
+                        Grid.Column="0" Grid.ColumnSpan="2"/>
 
                 <Button x:Name="continue"
                         Text="Continue"
                         Clicked="continue_Clicked"
                         Grid.Row="0"
-                        Grid.Column="4"/>
+                        Grid.Column="8" Grid.ColumnSpan="2"/>
 
                 <Label x:Name="time"
                        Text="Time"
                        VerticalOptions="Center"
                        HorizontalOptions="Center"
                        Grid.Row="0"
-                       Grid.Column="5"/>
+                       Grid.Column="10" Grid.ColumnSpan="2"/>
 
-                <Button x:Name="gears"
-                        Text="Gears"
-                        Clicked="gears_Clicked"
+                <Button x:Name="place"
+                        Text="Place"
+                        Clicked="place_Clicked"
                         Grid.Row="2"
-                        Grid.Column="0" Grid.ColumnSpan="3"/>
+                        Grid.Column="0" Grid.ColumnSpan="4"/>
 
                 <Button x:Name="pickup"
                         Text="Pickup"
                         Clicked="pickup_Clicked"
                         Grid.Row="2"
-                        Grid.Column="3" Grid.ColumnSpan="3"/>
+                        Grid.Column="4" Grid.ColumnSpan="4"/>
+
+                <Button x:Name="undo"
+                        Text="Undo"
+                        Grid.Row="2"
+                        Grid.Column="8" Grid.ColumnSpan="4"/>
 
                 <Button x:Name="ButtonOne"
                         Text="{Binding CurrentReport.ButtonOne.Text}"
                         Command="{Binding CurrentReport.ButtonOne.Command}"
                         CommandParameter="{Binding CurrentReport.ButtonOne.CommandParameter}"
                         Grid.Row="4"
-                        Grid.Column="0" Grid.ColumnSpan="2"/>
+                        Grid.Column="0" 
+                        Grid.ColumnSpan="2"/>
 
                 <Button x:Name="ButtonTwo"
                         Text="{Binding CurrentReport.ButtonTwo.Text}"
                         Command="{Binding CurrentReport.ButtonTwo.Command}"
                         CommandParameter="{Binding CurrentReport.ButtonTwo.CommandParameter}"
                         Grid.Row="4"
-                        Grid.Column="2" Grid.ColumnSpan="2"/>
+                        Grid.Column="2" 
+                        Grid.ColumnSpan="2"/>
 
                 <Button x:Name="ButtonThree"
                         Text="{Binding CurrentReport.ButtonThree.Text}"
                         Command="{Binding CurrentReport.ButtonThree.Command}"
                         CommandParameter="{Binding CurrentReport.ButtonThree.CommandParameter}"
                         Grid.Row="4"
-                        Grid.Column="4" Grid.ColumnSpan="2"/>
+                        Grid.Column="4" 
+                        Grid.ColumnSpan="2"/>
+
+                <Button x:Name="ButtonFour"
+                        Text=""
+                        Command=""
+                        CommandParameter=""
+                        Grid.Row=""
+                        Grid.Column=""
+                        Grid.ColumnSpan="0"/>
 
                 <Button x:Name="baseline"
                         Text="{Binding CurrentReport.Baseline, StringFormat='Baseline: {0}'}"
                         Clicked="baseline_Clicked"
                         Grid.Row="6"
-                        Grid.Column="0" Grid.ColumnSpan="2"/>
+                        Grid.Column="0" Grid.ColumnSpan="4"/>
 
                 <Button x:Name="breakdown"
                         Text="Breakdown"
                         Grid.Row="6"
-                        Grid.Column="2" Grid.ColumnSpan="2"/>
+                        Grid.Column="4" Grid.ColumnSpan="4"/>
 
                 <Button x:Name="no_action"
                         Text="No Action"
                         Grid.Row="6"
-                        Grid.Column="4" Grid.ColumnSpan="2"/>
+                        Grid.Column="8" Grid.ColumnSpan="4"/>
             </Grid>
         </StackLayout>
     </ContentPage.Content>
