--- a/ScoutingCollection/ScoutingCollection/MatchScoutAutoPage.xaml
+++ b/ScoutingCollection/ScoutingCollection/MatchScoutAutoPage.xaml
@@ -70,36 +70,28 @@
                         Text="{Binding CurrentReport.ButtonOne.Text}"
                         Command="{Binding CurrentReport.ButtonOne.Command}"
                         CommandParameter="{Binding CurrentReport.ButtonOne.CommandParameter}"
-                        Grid.Row="4"
-                        Grid.Column="0" 
-                        Grid.ColumnSpan="2"/>
+                        Row="4"/>
 
                 <Button x:Name="ButtonTwo"
                         Text="{Binding CurrentReport.ButtonTwo.Text}"
                         Command="{Binding CurrentReport.ButtonTwo.Command}"
                         CommandParameter="{Binding CurrentReport.ButtonTwo.CommandParameter}"
-                        Grid.Row="4"
-                        Grid.Column="2" 
-                        Grid.ColumnSpan="2"/>
+                        Row="4"/>
 
                 <Button x:Name="ButtonThree"
                         Text="{Binding CurrentReport.ButtonThree.Text}"
                         Command="{Binding CurrentReport.ButtonThree.Command}"
                         CommandParameter="{Binding CurrentReport.ButtonThree.CommandParameter}"
-                        Grid.Row="4"
-                        Grid.Column="4" 
-                        Grid.ColumnSpan="2"/>
+                        Row="4"/>
 
                 <Button x:Name="ButtonFour"
-                        Text=""
-                        Command=""
-                        CommandParameter=""
-                        Grid.Row=""
-                        Grid.Column=""
-                        Grid.ColumnSpan="0"/>
+                        Text="{Binding CurrentReport.ButtonFour.Text}"
+                        Command="{Binding CurrentReport.ButtonFour.Command}"
+                        CommandParameter="{Binding CurrentReport.ButtonFour.CommandParameter}"
+                        Row="4"/>
 
                 <Button x:Name="baseline"
-                        Text="{Binding CurrentReport.Baseline, StringFormat='Baseline: {0}'}"
+                        Text="Baseline"
                         Clicked="baseline_Clicked"
                         Grid.Row="6"
                         Grid.Column="0" Grid.ColumnSpan="4"/>
