--- a/CollectionImport/MainPage.xaml
+++ b/CollectionImport/MainPage.xaml
@@ -11,7 +11,7 @@
         <StackPanel>
             <TextBox x:Name="file"
                      HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,20,0,20" Height="36" Width="421"
-                     Text="{x:Bind ViewModel.Filepath}" FontSize="18"/>
+                     Text="{x:Bind ViewModel.Filepath, Mode=TwoWay}" FontSize="18"/>
             <Button Content="Import File" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,20,0,20" Height="68" Width="248"
                     Click="Import_Click"/>
         </StackPanel>
